--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2442,7 +2442,7 @@ table.views-table {
     content: "\f098 \00a0";
     font-family: FontAwesome, sans-serif;
   }
-  .header-fax-icon {
+  .header-fax-icon:before {
     content: "\f1ac \00a0";
     font-family: FontAwesome, sans-serif;
   }
