--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2207,20 +2207,22 @@ table.views-table {
   }
 }
 
-.language-switch:before {
+.i18n-en .language-icon:before {
   content: "";
   background: url(https://lipis.github.io/flag-icon-css/flags/4x3/es.svg) no-repeat center center;
   background-size: cover;
+  border-radius: 3px;
   width: 1em;
   height: 1em;
   display: inline-block;
   margin-right: 3px;
 }
 
-.i18n-es .language-switch:before {
+.i18n-es .language-icon:before {
   content: "";
   background: url(https://lipis.github.io/flag-icon-css/flags/4x3/gb.svg) no-repeat center center;
   background-size: cover;
+  border-radius: 3px;
   width: 1em;
   height: 1em;
   display: inline-block;
