--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1789,7 +1789,7 @@ table.views-table .pane-user-field-identification {
     #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] {
       display: inline-block;
       vertical-align: bottom; }
-      #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] .language-icon {
+      #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] .language-icon:before {
         width: 25px;
         height: 25px; }
       #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] .language-text {
