--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1744,7 +1744,7 @@ table.views-table .pane-user-field-identification {
   #block-panels-mini-header.sticky-header .row-one .left-column {
     text-align: center;
     position: absolute;
-    right: 111px; }
+    right: 138px; }
     #block-panels-mini-header.sticky-header .row-one .left-column .inner {
       border: 0;
       width: auto;
@@ -1791,7 +1791,8 @@ table.views-table .pane-user-field-identification {
       vertical-align: bottom; }
       #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] .language-icon:before {
         width: 25px;
-        height: 25px; }
+        height: 25px;
+        margin-right: 5px; }
       #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] .language-text {
         display: none; }
     #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2434"] {
@@ -1805,9 +1806,10 @@ table.views-table .pane-user-field-identification {
           border: 1px solid #ccc;
           width: 225px;
           margin: 0; }
-        #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] .language-icon {
+        #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] .language-icon:before {
           width: 1em;
-          height: 1em; }
+          height: 1em;
+          margin-right: 3px; }
         #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] .language-text {
           display: inline-block; }
         #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2434"] {
