--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2518,7 +2518,7 @@ table.views-table {
     .left-column {
       text-align: center;
       position: absolute;
-      right: 111px;
+      right: 138px;
 
       .inner {
         border: 0;
@@ -2591,6 +2591,7 @@ table.views-table {
         .language-icon:before {
           width: 25px;
           height: 25px;
+          margin-right: 5px;
         }
         .language-text {
           display: none;
@@ -2616,6 +2617,7 @@ table.views-table {
           .language-icon:before {
             width: 1em;
             height: 1em;
+            margin-right: 3px;
           }
           .language-text {
             display: inline-block;
