--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1732,7 +1732,8 @@ table.views-table .pane-user-field-identification {
     -webkit-box-flex: 0;
         -ms-flex: 0 225px;
             flex: 0 225px;
-    z-index: 1; }
+    z-index: 1;
+    display: block; }
     #block-panels-mini-header.sticky-header .row-one .left-column .inner,
     #block-panels-mini-header.sticky-header .row-one .right-column .inner {
       -webkit-box-align: start;
@@ -1744,7 +1745,8 @@ table.views-table .pane-user-field-identification {
   #block-panels-mini-header.sticky-header .row-one .left-column {
     text-align: center;
     position: absolute;
-    right: 126px; }
+    right: 126px;
+    margin-right: 0; }
     #block-panels-mini-header.sticky-header .row-one .left-column .inner {
       border: 0;
       width: auto;
@@ -1776,7 +1778,8 @@ table.views-table .pane-user-field-identification {
       #block-panels-mini-header.sticky-header .row-one .left-column {
         position: static;
         border: 1px;
-        margin-left: 0px; }
+        margin-left: 0px;
+        margin-right: 0.5em; }
         #block-panels-mini-header.sticky-header .row-one .left-column .inner {
           border: 1px solid #ccc;
           width: 225px;
