--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1795,6 +1795,10 @@ table.views-table .pane-user-field-identification {
       display: inline-block; }
   #block-panels-mini-header.sticky-header .row-one .middle-column .inner {
     text-align: center; }
+  #block-panels-mini-header.sticky-header .row-one .middle-column div[data-pane="2506"],
+  #block-panels-mini-header.sticky-header .row-one .middle-column div[data-pane="2507"],
+  #block-panels-mini-header.sticky-header .row-one .middle-column div[data-pane="2508"] {
+    display: none; }
   #block-panels-mini-header.sticky-header .row-one .right-column {
     position: absolute;
     right: 0; }
@@ -1812,7 +1816,8 @@ table.views-table .pane-user-field-identification {
       #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] .language-text {
         display: none; }
     #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2434"] {
-      width: auto; }
+      width: auto;
+      display: inline-block; }
     @media (min-width: 1106px) {
       #block-panels-mini-header.sticky-header .row-one .right-column {
         position: static;
