Phone size theming for the floating header

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1808,8 +1808,9 @@ table.views-table .pane-user-field-identification {
       margin-right: 1em; }
     #block-panels-mini-header.sticky-header .row-one .right-column .pane-widgets-s-socialmedia-share-default .widgets-element {
       float: left;
-      margin-right: 5px;
-      width: 25px; }
+      margin-right: 5px; }
+      #block-panels-mini-header.sticky-header .row-one .right-column .pane-widgets-s-socialmedia-share-default .widgets-element img {
+        width: 25px; }
     #block-panels-mini-header.sticky-header .row-one .right-column .pane-widgets-s-socialmedia-share-default #widgets-element-socialmedia_addthis-email {
       margin-right: 0; }
     #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] {
