Phone size theming for the floating header

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1786,6 +1786,8 @@ table.views-table .pane-user-field-identification {
           margin: 0; }
         #block-panels-mini-header.sticky-header .row-one .left-column .header-phone {
           line-height: 1.5; }
+        #block-panels-mini-header.sticky-header .row-one .left-column .header-phone-icon {
+          line-height: 1; }
         #block-panels-mini-header.sticky-header .row-one .left-column .header-address {
           display: block; } }
     #block-panels-mini-header.sticky-header .row-one .left-column .header-address-line1,
