--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2578,6 +2578,9 @@ table.views-table {
         .header-phone {
           line-height: 1.5;
         }
+        .header-phone-icon {
+          line-height: 1;
+        }
         .header-address {
           display: block;
         }
