--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2196,7 +2196,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
   }
 }
 
-.i18n-en .floating-header .language-icon:before {
+.i18n-en .sticky-header .language-icon:before {
   content: "";
   background: url(https://lipis.github.io/flag-icon-css/flags/4x3/es.svg) no-repeat center center;
   background-size: cover;
@@ -2207,7 +2207,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
   margin-right: 3px;
 }
 
-.i18n-es .floating-header .language-icon:before {
+.i18n-es .sticky-header .language-icon:before {
   content: "";
   background: url(https://lipis.github.io/flag-icon-css/flags/4x3/us.svg) no-repeat center center;
   background-size: cover;
