--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -1865,6 +1865,33 @@ html.js fieldset.collapsible div.fieldset-wrapper {
   .left-column {
     margin-left: 0;
     margin-right: 0.5em;
+    text-align: center;
+
+    .header-phone,
+    .header-fax,
+    .header-address-line1,
+    .header-address-line2,
+    .header-address-state,
+    .header-address-zip {
+      display: inline-block;
+    }
+    .header-fax {
+      margin-left: 5px;
+    }
+
+    @include breakpoint(1105px) {
+      .header-phone,
+      .header-fax,
+      .header-address-line1,
+      .header-address-line2,
+      .header-address-state,
+      .header-address-zip {
+        display: block;
+      }
+      .header-fax {
+        margin-left: 0px;
+      }
+    }    
   }
 
   .right-column,
@@ -1881,7 +1908,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
       align-items: flex-end;
       display: flex;
       justify-content: center;
-      flex: 0 230px;
+      flex: 0 255px;
       order: 0;
       margin: auto;
       margin-bottom: 0.5em;
@@ -2207,7 +2234,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
   margin-right: 3px;
 }
 
-.i18n-es .sticky-header .language-icon:before {
+.i18n-es .stick-header .language-icon:before {
   content: "";
   background: url(https://lipis.github.io/flag-icon-css/flags/4x3/us.svg) no-repeat center center;
   background-size: cover;
